update : tokenize notebook

--- a/notebook/notebook.ipynb
+++ b/notebook/notebook.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "0ac29296",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\DELL\\.conda\\envs\\tf-env\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -32,7 +23,8 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "import matplotlib.pyplot as plt\n",
     "import joblib\n",
-    "from transformers import BertTokenizer"
+    "from transformers import BertTokenizer\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -577,24 +569,45 @@
    "id": "2cdd838f",
    "metadata": {},
    "source": [
-    "<h1> Tokenisasi"
+    "<h2> Tokenisasi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "e8f8c2e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kalimat asli: Oli bocor\n",
+      "Kalimat setelah stemming: oli bocor\n",
+      "Hasil token: ['oli', 'bocor']\n",
+      "Token ID: [9885, 11480]\n"
+     ]
+    }
+   ],
    "source": [
     "# Load tokenizer IndoBERT\n",
     "tokenizer = BertTokenizer.from_pretrained(\"indobenchmark/indobert-base-p1\")\n",
     "\n",
-    "# Tokenisasi keluhan yang sudah di-stemming\n",
+    "# Ambil data input dan label\n",
     "texts = df[\"StemmedComplaint\"].tolist()\n",
     "labels = df[\"Label\"].tolist()\n",
     "\n",
-    "# Tokenisasi batch\n",
+    "# Tokenisasi contoh pertama untuk dicek manual\n",
+    "sample = texts[0]\n",
+    "tokens = tokenizer.tokenize(sample)\n",
+    "ids = tokenizer.convert_tokens_to_ids(tokens)\n",
+    "\n",
+    "print(\"Kalimat asli:\", df[\"Complaint\"].iloc[0])\n",
+    "print(\"Kalimat setelah stemming:\", sample)\n",
+    "print(\"Hasil token:\", tokens)\n",
+    "print(\"Token ID:\", ids)\n",
+    "\n",
+    "# Tokenisasi semua teks (untuk model)\n",
     "encodings = tokenizer(\n",
     "    texts,\n",
     "    truncation=True,\n",
@@ -606,8 +619,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "88b287ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jumlah total data     : 1000\n",
+      "Jumlah data training  : 800\n",
+      "Jumlah data validasi  : 200\n",
+      "\n",
+      "Contoh data training:\n",
+      "baterai soak\n",
+      "Label (ServiceType): 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split ke data latih dan validasi\n",
+    "train_texts, val_texts, train_labels, val_labels = train_test_split(\n",
+    "    texts, labels, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Cek hasil split\n",
+    "print(f\"Jumlah total data     : {len(texts)}\")\n",
+    "print(f\"Jumlah data training  : {len(train_texts)}\")\n",
+    "print(f\"Jumlah data validasi  : {len(val_texts)}\")\n",
+    "print(\"\\nContoh data training:\")\n",
+    "print(train_texts[0])\n",
+    "print(\"Label (ServiceType):\", train_labels[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9e512f6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token ID sample (train): tensor([   2, 5691,  391,   19,    3,    0])\n",
+      "Attention mask (train): tensor([1, 1, 1, 1, 1, 0])\n",
+      "Jumlah data tokenized train : 800\n",
+      "Jumlah data tokenized valid : 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tokenisasi ulang untuk data training\n",
+    "train_encodings = tokenizer(\n",
+    "    train_texts,\n",
+    "    truncation=True,\n",
+    "    padding=True,\n",
+    "    max_length=64,\n",
+    "    return_tensors=\"pt\"\n",
+    ")\n",
+    "\n",
+    "# Tokenisasi ulang untuk data validasi\n",
+    "val_encodings = tokenizer(\n",
+    "    val_texts,\n",
+    "    truncation=True,\n",
+    "    padding=True,\n",
+    "    max_length=64,\n",
+    "    return_tensors=\"pt\"\n",
+    ")\n",
+    "\n",
+    "# Cek hasil tokenisasi ulang\n",
+    "print(\"Token ID sample (train):\", train_encodings[\"input_ids\"][0][:10])\n",
+    "print(\"Attention mask (train):\", train_encodings[\"attention_mask\"][0][:10])\n",
+    "print(\"Jumlah data tokenized train :\", len(train_encodings[\"input_ids\"]))\n",
+    "print(\"Jumlah data tokenized valid :\", len(val_encodings[\"input_ids\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a39bf0d8",
    "metadata": {},
    "outputs": [],
    "source": []
